--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -44,6 +44,7 @@
         <module>tomcat</module>
         <module>tooling-support</module>
         <module>soap-api</module>
+        <module>extensions-soap-support</module>
     </modules>
 
     <build>
