--- a/tests/unit/pom.xml
+++ b/tests/unit/pom.xml
@@ -51,6 +51,18 @@
             <artifactId>mule-service-weave</artifactId>
             <classifier>mule-service</classifier>
         </dependency>
+        <dependency>
+            <groupId>org.mule.services</groupId>
+            <artifactId>mule-service-soap</artifactId>
+            <classifier>mule-service</classifier>
+            <version>4.0.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.mule</groupId>
+                    <artifactId>mule-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 </project>
 
